[desktopCapture] set expected results when a dialog is cancelled.

The desktop capture has the shema[1] that has two parameters, a streamId
and an option object which is added laterly. But when we cancle the picker
dialog, the option object isn't added into the result in Cancel()[2].
So schemaUtils.validate() will throw an error due to the violation.

This CL addes an option object into the result list to meet the requirement.

[1]: https://cs.chromium.org/chromium/src/chrome/common/extensions/api/desktop_capture.json?l=38
[2]: https://cs.chromium.org/chromium/src/chrome/browser/extensions/api/desktop_capture/desktop_capture_base.cc?l=73

Bug: 784508
Change-Id: Ie17743dacff5f0171af52445df673b70e89a62cd
Reviewed-on: https://chromium-review.googlesource.com/773115
Reviewed-by: Zijie He <zijiehe@chromium.org>
Commit-Queue: Weiyong Yao <braveyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516952}
Former-commit-id: e334368d858f03a8fd653f72eebf37675c16d585